# fluence-secret-holder

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  download_sqlite.sh  fluence.yaml  provider.yaml
.fluence/: provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
.fluence/modules/sqlite3.tar.gz_d35d7a28b1a8a55e87df96578d70ad46/: module.yaml
.fluence/service-configs/: alchemy-rpc_Config.toml  secret-holder_Config.toml  secret-user-2_Config.toml  secret-user_Config.toml
.fluence/test-configs/: secret-holder_Config.toml  secret-user-2_Config.toml  secret-user_Config.toml
.github/workflows/: rust.yaml  ts.yaml
examples/alchemy-rpc/aqua/: main.aqua
examples/alchemy-rpc/client/: .gitignore  .prettierignore  package.json  tsconfig.json
examples/alchemy-rpc/client/src/: index.ts
examples/alchemy-rpc/client/src/compiled-aqua/: main.ts
examples/alchemy-rpc/service/: service.yaml
examples/alchemy-rpc/service/alchemy-rpc-facade/: Cargo.toml  module.yaml
examples/alchemy-rpc/service/alchemy-rpc-facade/src/: main.rs
src/aqua/: common.aqua  main.aqua  secret_holder.aqua  srv.aqua  worker.aqua
src/aqua/secret_worker/: getter.aqua  local.aqua  saver.aqua  worker.aqua
src/cli/: .gitignore  eslint.config.js  package.json  tsconfig.json
src/cli/src/: index.ts  initializer.ts  options.ts  relays.json  utils.ts
src/cli/src/secret/: secret.ts
src/crates/crypto-utils/: Cargo.toml
src/crates/crypto-utils/src/: constant.rs  lib.rs  types.rs
src/crates/marine-error/: Cargo.toml
src/crates/marine-error/marine-error-derive/: Cargo.toml
src/crates/marine-error/marine-error-derive/src/: lib.rs
src/crates/marine-error/src/: lib.rs
src/crates/marine-fs-utils/: Cargo.toml
src/crates/marine-fs-utils/src/: lib.rs
src/crates/secret-holder-utils/: Cargo.toml
src/crates/secret-holder-utils/src/: lib.rs
src/integration-tests/: .gitignore  .mocharc.json  package.json  tsconfig.json
src/integration-tests/aqua/: main.aqua
src/integration-tests/services/secret-user-default/: service.yaml
src/integration-tests/services/secret-user-with-use/: service.yaml
src/integration-tests/services/secret-user-with-use/use-secret/: Cargo.toml  module.yaml
src/integration-tests/services/secret-user-with-use/use-secret/src/: main.rs
src/integration-tests/src/: index.ts
src/integration-tests/src/compiled-aqua/: main.ts
src/secret-holder-client/: .eslintignore  .gitignore  .mocharc.json  package.json  tsconfig.json
src/secret-holder-client/src/: index.ts  secret_giver.ts
src/secret-holder-client/src/compiled-aqua/: local_dalek.ts  main.ts  secret_holder.ts  worker.ts
src/secret-holder-client/src/compiled-aqua/secret_worker/: local.ts
src/secret-holder-client/src/crypto/: client.ts  types.ts
src/secret-holder-client/src/secret-holder/: aqua_wrapper.ts  client.ts  secret.ts  types.ts  utils.ts
src/secret-holder-client/src/types/: types.ts
src/secret-holder-client/src/utils/: utils.ts
src/secret-holder-client/src/worker/: aqua_wrapper.ts  types.ts  worker.ts
src/secret-holder-client/tests/: secret_giver.test.ts
src/secret-holder-client/tests/secret-holder/: client.test.ts  secret.test.ts  utils.test.ts
src/secret-holder-client/tests/worker/: worker.test.ts
src/services/modules/crypto-module/: Cargo.toml  module.yaml
src/services/modules/crypto-module/imports/: Cargo.toml
src/services/modules/crypto-module/imports/src/: lib.rs
src/services/modules/crypto-module/src/: lib.rs  main.rs
src/services/modules/localfile-adapter/: Cargo.toml  module.yaml
src/services/modules/localfile-adapter/src/: lib.rs  main.rs
src/services/modules/secret-user/: Cargo.toml
src/services/modules/secret-user-default/: module.yaml
src/services/modules/secret-user-with-use/: module.yaml
src/services/modules/secret-user/imports/: Cargo.toml
src/services/modules/secret-user/imports/src/: lib.rs
src/services/modules/secret-user/src/: lib.rs  main.rs
src/services/secret-holder/: service.yaml
src/services/secret-holder/modules/secret-facade/: Cargo.toml  module.yaml
src/services/secret-holder/modules/secret-facade/src/: lib.rs  main.rs
src/services/secret-holder/modules/secret-mover/: Cargo.toml  module.yaml
src/services/secret-holder/modules/secret-mover/imports/: Cargo.toml
src/services/secret-holder/modules/secret-mover/imports/src/: lib.rs
src/services/secret-holder/modules/secret-mover/src/: initializer.rs  lib.rs  main.rs  types.rs
src/services/secret-holder/modules/secret-saver-adapter/: Cargo.toml  module.yaml
src/services/secret-holder/modules/secret-saver-adapter/src/: lib.rs  main.rs  storage.rs
src/services/tests/: Cargo.toml
src/services/tests/src/: main.rs
