[package]
name = "alchemy-rpc-facade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = "0.14.0"
marine-error = { path = "../../../../src/crates/marine-error" }
marine-error-derive = { path = "../../../../src/crates/marine-error/marine-error-derive" }
marine-fs-utils = { path = "../../../../src/crates/marine-fs-utils" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
secret-user-imports = { path = "../../../../src/services/modules/secret-user/imports" }
curl-effector-imports = "0.1.1"

[dev-dependencies]
marine-rs-sdk-test = "0.16.0"
