[package]
name = "localfile_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = "0.14.0"
marine-error = { path = "../../../crates/marine-error" }
marine-error-derive = { path = "../../../crates/marine-error/marine-error-derive" }
marine-fs-utils = { path = "../../../crates/marine-fs-utils" }

[dev-dependencies]
marine-rs-sdk-test = "0.16.0"