[package]
name = "secret_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = "0.14.0"
marine-error = { path = "../../../crates/marine-error" }
marine-error-derive = { path = "../../../crates/marine-error/marine-error-derive" }
crypto-utils = { path = "../../../crates/crypto-utils" }
marine-fs-utils = { path = "../../../crates/marine-fs-utils" }
secret_mover = { path = "../../secret-holder/modules/secret-mover" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
marine-rs-sdk-test = "0.16.0"

[features]
default = []
get_and_use_secret = []