[package]
name = "use_secret_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = "0.14.0"
marine-error = { path = "../../../../crates/marine-error" }
marine-error-derive = { path = "../../../../crates/marine-error/marine-error-derive" }
secret_user = { path = "../../../../services/modules/secret-user", features = ["get_and_use_secret"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
