[package]
name = "secret_saver_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = { version="0.14.0" }
marine-error = { path = "../../../../crates/marine-error" }
marine-error-derive = { path = "../../../../crates/marine-error/marine-error-derive" }
secret-holder-utils = { path = "../../../../crates/secret-holder-utils" }
localfile_adapter = { path = "../../../modules/localfile-adapter" }
crypto-utils = { path = "../../../../crates/crypto-utils" }
marine-sqlite-connector = "0.11.0"

[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
