[package]
name = "secret-mover-imports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = "0.14.0"
secret_mover = { path = "../" }
marine-error = { path = "../../../../../crates/marine-error" }

[dev-dependencies]
marine-rs-sdk-test = "0.16.0"
